# ImgProcess_in_C

./: .gitignore  CMakeLists.txt  ImagAPI.c  ImageAPI.h  ProcessAPI.c  ProcessAPI.h  Readme.md  bmpFile_IO.h  header.h  main.c
base/: algoFunc.c  algoFunc.h  baseFunc.c  baseFunc.h  data.c  data.h  tf.c  tf.h  transferFunc.c  transferFunc.h
bmpFileIO/: bmpIO.c  bmpIO.h
fileIO/: bmpIO.c  bmpIO.h  jpegIO.c  jpegIO.h  jpeg_compress.c  jpeg_compress.h
jpgTransfer/: Makefile  bmp.c  bmp.h  jpeg_exp.c  jpeg_exp.h  main.c
processAPI/: ProcessAPI.c  ProcessAPI.h  jpegCompress.c  jpegCompress.h  processAPI.c  processAPI.h
settings/: settings.c  settings.h
testing/: imgConfig.py  testFFT2.py
